--- a/data/.gitconfig
+++ b/data/.gitconfig
@@ -1,2 +1,5 @@
 [alias]
 	hist = log --pretty=format:'%C(yellow)[%ad]%C(reset) %C(green)[%h]%C(reset) | %C(red)%s %C(bold red){{%an}}%C(reset) %C(blue)%d%C(reset)' --graph --date=short
+[user]
+	name = Robert Duong
+	email = robertduongbse@gmail.com
